# http-client-core

./: .coveragerc  .env.example  .env.production  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_monitoring_tests.sh
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION.md  MIGRATION_V2.md  PHASE_FIXES_SUMMARY.md  branch_policy.md
docs/examples/: config-kubernetes.yaml  config-minimal.yaml  config-production.yaml  config.json  config.yaml
docs/migration/: v1-to-v2.md
examples/: 01_basic_usage.py  02_with_config.py  03_with_retry.py  04_with_plugins.py  05_download_file.py  06_web_scraping.py  07_advanced_logging.py  08_environment_config.py  browser_fingerprint_example.py  config.json  config.yaml
scripts/: check.bat  check.py  check.sh
src/http_client/: __init__.py  async_client.py
src/http_client/contrib/: __init__.py
src/http_client/contrib/opentelemetry/: __init__.py  metrics.py  plugin.py
src/http_client/core/: __init__.py  circuit_breaker.py  config.py  context.py  error_handler.py  exceptions.py  http_client.py  retry_engine.py  session_manager.py  utils.py
src/http_client/core/env_config/: __init__.py  file_loader.py  hot_reload.py  loader.py  profiles.py  secrets.py  validator.py
src/http_client/core/logging/: __init__.py  config.py  filters.py  formatters.py  handlers.py  logger.py
src/http_client/plugins/: __init__.py  async_cache_plugin.py  async_monitoring_plugin.py  async_plugin.py  async_rate_limit_plugin.py  auth_plugin.py  base_v2.py  browser_fingerprint.py  cache_plugin.py  disk_cache_plugin.py  disk_cache_v2.py  logging_plugin.py  monitoring_plugin.py  plugin.py  proxy_pool_plugin.py  rate_limit_plugin.py  retry_plugin.py  user_agent_plugin.py
src/http_client/tools/: __init__.py  migration_check.py
src/http_client/utils/: __init__.py  proxy_manager.py  sanitizer.py  serialization.py  user_agents.py
tests/: conftest.py
tests/integration/: test_full_integration.py  test_http_client_logging_integration.py  test_retry_integration.py
tests/unit/: test_advanced_plugins.py  test_async_client.py  test_core_edge_cases.py  test_core_features.py  test_disk_cache_plugin.py  test_error_handling.py  test_http_client.py  test_monitoring_plugin.py  test_plugin_v2.py  test_plugins.py  test_proxy_pool_plugin.py  test_rate_limit_debug.py  test_thread_safety_plugins.py  test_user_agent_plugin.py
tests/unit/contrib/: test_opentelemetry.py
tests/unit/core/: test_backward_compatibility.py  test_circuit_breaker.py  test_config.py  test_error_handler_complete.py  test_exceptions.py  test_exceptions_new.py  test_http_client.py  test_http_client_complete.py  test_http_client_health.py  test_http_client_logging.py  test_http_client_retry.py  test_http_client_security.py  test_retry_engine.py  test_thread_safety.py  test_utils.py
tests/unit/core/env_config/: __init__.py  test_file_loader.py  test_hot_reload.py  test_loader.py  test_profiles.py  test_secrets.py  test_validator.py
tests/unit/core/logging/: test_config.py  test_filters.py  test_formatters.py  test_handlers.py  test_logger.py
tests/unit/plugins/: test_async_plugin.py  test_browser_fingerprint.py  test_cache_plugin.py  test_logging_plugin.py  test_plugin_ordering.py  test_rate_limit_plugin.py  test_retry_plugin.py
tests/unit/tools/: test_migration_check.py
tests/unit/utils/: test_proxy_manager.py  test_serialization.py
