[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-client-core"
version = "1.5.0"
description = "Production-ready HTTP client library with plugin system, circuit breaker, retry logic, and async support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vladislav", email = "vladm1999il@gmail.com"}
]
maintainers = [
    {name = "Vladislav", email = "vladm1999il@gmail.com"}
]
keywords = [
    "http",
    "client",
    "requests",
    "httpx",
    "async",
    "api",
    "rest",
    "web-scraping",
    "retry",
    "circuit-breaker",
    "plugins",
    "rate-limiting",
    "caching",
    "monitoring",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
# Async HTTP client support
async = [
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
]

# Disk-based caching
cache = [
    "diskcache>=5.6.0",
]

# Progress bars for downloads
progress = [
    "tqdm>=4.66.0",
]

# SOCKS proxy support
socks = [
    "pysocks>=1.7.1",
    "requests[socks]",
]

# OpenTelemetry distributed tracing and metrics
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-semantic-conventions>=0.41b0",
]

# YAML configuration file support
yaml = [
    "pyyaml>=6.0",
]

# All optional dependencies
all = [
    "http-client-core[async,cache,progress,socks,otel,yaml]",
]

# Development dependencies
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "responses>=0.25.0",
    "respx>=0.21.0",
    
    # Code quality
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    
    # Optional deps for full test coverage
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "diskcache>=5.6.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Git-Dalv/http-client-core"
Documentation = "https://github.com/Git-Dalv/http-client-core#readme"
Repository = "https://github.com/Git-Dalv/http-client-core"
Issues = "https://github.com/Git-Dalv/http-client-core/issues"
Changelog = "https://github.com/Git-Dalv/http-client-core/blob/main/CHANGELOG.md"

[project.scripts]
# Migration checker tool
http-client-migrate = "http_client.tools.migration_check:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["http_client*"]

[tool.setuptools.package-data]
http_client = ["py.typed"]

# ============================================================
# PYTEST
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/http_client",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=75",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require network)",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# BLACK
# ============================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

# ============================================================
# RUFF
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by black)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "ARG001",  # unused function argument (common in plugins)
    "ARG002",  # unused method argument
    "B008",    # function call in default argument (used in dataclasses)
    "RET504",  # unnecessary assignment before return
    "SIM108",  # use ternary operator (not always clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # magic values ok in tests
    "ARG001",   # unused arguments ok in tests
    "ARG002",
    "PT011",    # pytest.raises too broad
]
"examples/*" = [
    "T201",     # print statements ok in examples
]

[tool.ruff.lint.isort]
known-first-party = ["http_client"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

# ============================================================
# MYPY
# ============================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "examples.*",
]
disallow_untyped_defs = false
check_untyped_defs = false

# ============================================================
# COVERAGE
# ============================================================

[tool.coverage.run]
source = ["src/http_client"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
precision = 2
fail_under = 75

[tool.coverage.html]
directory = "htmlcov"
